// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePicker has a helptext 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="dateField"
  >
    <input
      aria-label="date_picker_hidden"
      name="dateField"
      type="hidden"
      value="2020-06-02"
    />
    <div
      class="date-picker"
    >
      <div
        class="input-group"
        style=""
      >
        <div
          class="input-group-item"
        >
          <input
            name="datePicker"
            type="hidden"
            value=""
          />
          <input
            class="form-control input-group-inset input-group-inset-after"
            type="text"
            value=""
          />
          <div
            class="input-group-inset-item input-group-inset-item-after"
          >
            <button
              class="date-picker-dropdown-toggle btn btn-unstyled"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-calendar"
                role="presentation"
              >
                <use
                  xlink:href="icons.svg#calendar"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <span
      class="form-text"
    >
      Type something
    </span>
  </div>
</div>
`;

exports[`DatePicker has a label 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="dateField"
  >
    <p
      class="ddm-label"
    >
      label
    </p>
    <input
      aria-label="date_picker_hidden"
      name="dateField"
      type="hidden"
      value="2020-06-02"
    />
    <div
      class="date-picker"
    >
      <div
        class="input-group"
        style=""
      >
        <div
          class="input-group-item"
        >
          <input
            name="datePicker"
            type="hidden"
            value=""
          />
          <input
            class="form-control input-group-inset input-group-inset-after"
            type="text"
            value=""
          />
          <div
            class="input-group-inset-item input-group-inset-item-after"
          >
            <button
              class="date-picker-dropdown-toggle btn btn-unstyled"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-calendar"
                role="presentation"
              >
                <use
                  xlink:href="icons.svg#calendar"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DatePicker has a predefinedValue 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="dateField"
  >
    <input
      aria-label="date_picker_hidden"
      name="dateField"
      type="hidden"
      value="2020-06-02"
    />
    <div
      class="date-picker"
    >
      <div
        class="input-group"
        style=""
      >
        <div
          class="input-group-item"
        >
          <input
            name="datePicker"
            type="hidden"
            value="06/02/2020"
          />
          <input
            class="form-control input-group-inset input-group-inset-after"
            type="text"
            value="06/02/2020"
          />
          <div
            class="input-group-inset-item input-group-inset-item-after"
          >
            <button
              class="date-picker-dropdown-toggle btn btn-unstyled"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-calendar"
                role="presentation"
              >
                <use
                  xlink:href="icons.svg#calendar"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DatePicker has an id 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="dateField"
  >
    <input
      aria-label="date_picker_hidden"
      name="dateField"
      type="hidden"
      value="2020-06-02"
    />
    <div
      class="date-picker"
    >
      <div
        class="input-group"
        style=""
      >
        <div
          class="input-group-item"
        >
          <input
            name="datePicker"
            type="hidden"
            value=""
          />
          <input
            class="form-control input-group-inset input-group-inset-after"
            type="text"
            value=""
          />
          <div
            class="input-group-inset-item input-group-inset-item-after"
          >
            <button
              class="date-picker-dropdown-toggle btn btn-unstyled"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-calendar"
                role="presentation"
              >
                <use
                  xlink:href="icons.svg#calendar"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
